--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "ai": "^2.1.17",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "next": "13.4.8",
+    "openai-edge": "^1.2.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
