login and signup page

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "13.4.8",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "langchain": "^0.0.106",
     "next": "13.4.8",
     "openai-edge": "^1.2.0",
     "postcss": "8.4.24",
