--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sql-formatter": "^12.2.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
