--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "ai": "^2.1.17",
+    "animejs": "^3.2.1",
     "autoprefixer": "10.4.14",
     "child_process": "^1.0.2",
     "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "express": "^4.18.2",
+    "framer-motion": "^10.12.21",
     "fs": "^0.0.1-security",
     "langchain": "^0.0.106",
     "mysql": "^2.18.1",
@@ -35,12 +37,14 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "sql-formatter": "^12.2.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.7",
     "@types/mysql": "^2.15.21",
     "@types/uuid": "^9.0.2"
   }
