--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "13.4.8",
     "next-auth": "^4.22.1",
     "openai-edge": "^1.2.0",
+    "pocketbase": "^0.15.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-ace": "^10.1.0",
